Add password confirm to editinfo

--- a/views/user/editinfo.ejs
+++ b/views/user/editinfo.ejs
@@ -137,6 +137,12 @@
         <p class="help-block"><%- msg('editinfo-password-tips') %></p>
       </div>
     </div>
+    <div class="field">
+      <label for="newpass-repeat"><%- msg('new-password-repeat') %></label>
+      <div class="controls">
+        <input type="password" class="text" id="newpassrepeat" name="newpassrepeat" autocomplete="off">
+      </div>
+    </div>
 <div class="alert alert-info">
   <%- msg('editinfo-notice') %>
 </div>
