--- a/views/user/user.ejs
+++ b/views/user/user.ejs
@@ -19,13 +19,15 @@
       </p>
     <% } %>
 
-    <hr>
-    <% if (thirdpartyUser && thirdpartyUser.renren) { %>
-      <p>
-        <a href="http://www.renren.com/<%= thirdpartyUser.renren.uid %>" target="_blank" style="border:none">
-          <img src="/img/renren.png" title="<%= msg('renren') %>">
-        </a>
-      </p>
+    <% if (thirdpartyUser) { %>
+      <hr>
+      <% if (thirdpartyUser.renren) { %>
+        <p>
+          <a href="http://www.renren.com/<%= thirdpartyUser.renren.uid %>" target="_blank" style="border:none">
+            <img src="/img/renren.png" title="<%= msg('renren') %>">
+          </a>
+        </p>
+      <% } %>
     <% } %>
 
     <% if (bbsUser) { %>
