--- a/assets/css/style.less
+++ b/assets/css/style.less
@@ -129,6 +129,17 @@ hr {
     border-bottom: 1px dotted #333;
 }
 
+.action-list {
+    list-style: none;
+    padding: 0 10px;
+
+    .btn-danger {
+        font-size: 0.8em;
+        line-height: 2em;
+        padding: 0 15px;
+    }
+}
+
 @import "_form.less";
 @import "_table.less";
 @import "_layout.less";
