--- a/assets/css/_layout.less
+++ b/assets/css/_layout.less
@@ -42,6 +42,7 @@
 
 #search {
     background: #FFF no-repeat 6px center;
+    height: 30px;
     line-height: 30px;
     padding: 8px 16px;
     border: none;
