fix previous bug in logo

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -17,7 +17,11 @@
 <body>
     <div id="page">
         <div id="header">
-            <div id="logo"><a href="/u/<%= curUser.name %>">Accounts9</a></div>
+					  <% if (curUser) { %>
+							<div id="logo"><a href="/u/<%= curUser.name %>">Accounts9</a></div>
+						<% } else { %>
+							<div id="logo">Accounts9</div>
+						<% } %>
             <ul id="nav">
               <% if (!curUser) { %>
                 <li><a class="btn" href="/login"><%- msg('Login') %></a></li>
