style & img optimization

--- a/assets/css/style.less
+++ b/assets/css/style.less
@@ -3,14 +3,14 @@
 @import "_normalize.less";
 @import "_font-awesome.less";
 
-@green: #67b82b;
+@green: lighten(#67b82b, 5%);
 
 html,
 button,
 input,
 select,
 textarea {
-    font-family: '微软雅黑', '宋体';
+    font-family: "Segoe UI", "Helvetica Neue", Helvetica, "微软雅黑", "黑体", SimHei, sans-serif;
 }
 
 body {
