--- a/assets/css/_form.less
+++ b/assets/css/_form.less
@@ -10,6 +10,10 @@ input[readonly] {
     background: #DDD;
 }
 
+.btn {
+    text-decoration: none;
+}
+
 button.btn,
 input.btn {
     background: darken(@green, 15%);
