--- a/assets/css/style.less
+++ b/assets/css/style.less
@@ -62,6 +62,13 @@ h2 {
 
 a {
     color: #000;
+    text-decoration: none;
+    border-bottom: 1px dotted;
+
+    &:hover,
+    &:focus {
+        border-bottom: 1px solid;
+    }
 }
 
 a.btn {
