surname & givenname are required in /editinfo

--- a/views/user/register.ejs
+++ b/views/user/register.ejs
@@ -9,6 +9,20 @@
       </div>
     </div>
     <div class="field">
+      <label for="surname"><%- msg('sur-name') %></label>
+      <div class="controls">
+        <input type="text" class="text" id="surname" name="surname" required>
+        <p class="help-block"><%- msg('editinfo-surname-tips') %></p>
+      </div>
+    </div>
+    <div class="field">
+      <label for="givenname"><%- msg('given-name') %></label>
+      <div class="controls">
+        <input type="text" class="text" id="givenname" name="givenname" required>
+        <p class="help-block"><%- msg('editinfo-givenname-tips') %></p>
+      </div>
+    </div>
+    <div class="field">
       <label class="control-label" for="password"><%- msg('Password') %></label>
       <div class="controls">
         <input type="password" class="text" id="password" name="password">
