student info in registry.ejs

--- a/views/user/editinfo.ejs
+++ b/views/user/editinfo.ejs
@@ -4,7 +4,7 @@
     <div class="field">
       <label for="username"><%- msg('Username') %></label>
       <div class="controls">
-        <input type="text" class="text" id="username" value="<%= user.name %>" readonly="readonly">
+        <input type="text" class="text" id="username" name="username" value="<%= user.name %>" readonly="readonly">
       </div>
     </div>
     <div class="field">
