--- a/views/user/register.ejs
+++ b/views/user/register.ejs
@@ -45,8 +45,8 @@
     <div class="field">
       <label for="bachelorYear"><%- msg('bachelor') %></label>
       <div class="controls">
-        <input type="text" class="text text-tiny" name="bachelorYear">
-        <input type="text" class="text text-tiny" name="bachelorClassNumber">
+        <input type="text" class="text text-tiny" name="bachelorYear" placeholder="2013">
+        <input type="text" class="text text-tiny" name="bachelorClassNumber" placeholder="1">
         <%- msg('class-number') %>
         <p class="help-block"><%- msg('editinfo-bachelor-tips') %></p>
       </div>
@@ -54,8 +54,8 @@
     <div class="field">
       <label for="masterYear"><%- msg('master') %></label>
       <div class="controls">
-        <input type="text" class="text text-tiny" name="masterYear">
-        <input type="text" class="text text-tiny" name="masterClassNumber">
+        <input type="text" class="text text-tiny" name="masterYear" placeholder="2013">
+        <input type="text" class="text text-tiny" name="masterClassNumber" placeholder="1">
         <%- msg('class-number') %>
         <p class="help-block"><%- msg('editinfo-master-tips') %></p>
       </div>
@@ -63,8 +63,8 @@
     <div class="field">
       <label for="doctorYear"><%- msg('doctor') %></label>
       <div class="controls">
-        <input type="text" class="text text-tiny" name="doctorYear">
-        <input type="text" class="text text-tiny" name="doctorClassNumber">
+        <input type="text" class="text text-tiny" name="doctorYear" placeholder="2013">
+        <input type="text" class="text text-tiny" name="doctorClassNumber" placeholder="1">
         <%- msg('class-number') %>
         <p class="help-block"><%- msg('editinfo-doctor-tips') %></p>
       </div>
