Feature: export as vcard

--- a/views/group/group.ejs
+++ b/views/group/group.ejs
@@ -103,3 +103,8 @@
   <% var showBelong = false %>
   <% include ../user/userlist %>
 <% })() %>
+<a id="export" href="#" download="contacts.vcf" class="btn">另存为vCard文件</a>
+
+<script src="/js/base64.js"></script>
+<script src="/js/vcard.js"></script>
+
