--- a/views/user/userlist.ejs
+++ b/views/user/userlist.ejs
@@ -1,4 +1,4 @@
-<table class="table" style="font-size:12px">
+<table id="colleague" class="table" style="font-size:12px">
   <tr>
     <th><%= msg('uid') %></th>
     <th><%= msg('username') %></th>
