--- a/views/404.ejs
+++ b/views/404.ejs
@@ -8,7 +8,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>Accounts9</title>
     <link rel="shortcut icon" href="/favicon.ico">
-    <link href='//fonts.googleapis.com/css?family=Ubuntu:300' rel='stylesheet' type='text/css'>
+	<!--<link href='//fonts.googleapis.com/css?family=Ubuntu:300' rel='stylesheet' type='text/css'>-->
+    <link href='/css/ubuntu-300.css' rel='stylesheet' type='text/css'>
     <link href="/css/style.min.css" rel="stylesheet">
     <script>
         (function(d) { d.className = d.className.replace(/(^|\s)no-js(\s|$)/, '$1js$2'); })(document.documentElement);
