--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>Accounts9</title>
     <link rel="shortcut icon" href="/favicon.ico">
-    <link href='//fonts.googleapis.com/css?family=Ubuntu:300' rel='stylesheet' type='text/css'>
+	<!--<link href='//fonts.googleapis.com/css?family=Ubuntu:300' rel='stylesheet' type='text/css'>-->
+    <link href='/css/ubuntu-300.css' rel='stylesheet' type='text/css'>
     <%- css('style') %>
     <script>
         (function(d) { d.className = d.className.replace(/(^|\s)no-js(\s|$)/, '$1js$2'); })(document.documentElement);
@@ -36,8 +37,8 @@
         <div id="home-footer"><a href="/about">THU.DCST.SAST.NET</a> 2012-2013</div>
     </div>
 
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="js/jquery-1.7.2.min.js"><\/script>')</script>
+    <script src="/js/jquery-1.7.2.min.js"></script>
+    <script>window.jQuery || document.write('<script src="/js/jquery-1.7.2.min.js"><\/script>')</script>
     <script src="/js/jquery.placeholder-enhanced.min.js"></script>
     <script type="text/javascript">
         $('input[placeholder]').placeholderEnhanced();
