--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -8,13 +8,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title><%= title %> - Accounts9</title>
     <link rel="shortcut icon" href="/favicon.ico">
-    <link href='//fonts.googleapis.com/css?family=Ubuntu:300' rel='stylesheet' type='text/css'>
+	<!--<link href='//fonts.googleapis.com/css?family=Ubuntu:300' rel='stylesheet' type='text/css'>-->
+    <link href='/css/ubuntu-300.css' rel='stylesheet' type='text/css'>
     <%- css('style') %>
     <script>
         (function(d) { d.className = d.className.replace(/(^|\s)no-js(\s|$)/, '$1js$2'); })(document.documentElement);
     </script>
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="js/jquery-1.7.2.min.js"><\/script>')</script>
+    <script src="/js/jquery-1.7.2.min.js"></script>
+    <script>window.jQuery || document.write('<script src="/js/jquery-1.7.2.min.js"><\/script>')</script>
 </head>
 <body>
     <div id="page">
