更新开发人员

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -11,4 +11,5 @@
   <li><a href="/u/liyuliang001">Liyuliang001</a>
   <li><a href="/u/brian14708">Brian</a>
   <li><a href="/u/ray0">Ray</a>
+  <li><a href="/u/zhangyx13">cqtest</a>
 </li>
