--- a/assets/css/page/_home.less
+++ b/assets/css/page/_home.less
@@ -23,7 +23,7 @@
 }
 
 #home-logo {
-    background: darken(@green, 10%);
+    background: darken(@red, 10%);
     padding: 5px 10px;
     position: absolute;
     top: 140px;
@@ -75,7 +75,7 @@
 }
 
 #home-input-submit {
-    background: darken(@green, 15%);
+    background: darken(@red, 15%);
     color: #FFF;
     margin: 10px;
     margin-left: 260px;
