--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,7 +20,7 @@
     <div id="home-page">
         <div id="home-logo">Accounts9</div>
         <ul id="home-welcome">
-            <li>欢迎各位酒井用户来到Accounts9。</li>
+            <li>祝 ByVoid 生日快乐！</li>
             <% if (!curUser) { %>
               <li><a href="/register"><i class="icon-user"></i>注册</a></li>
             <% } else {%>
