--- a/assets/css/style.less
+++ b/assets/css/style.less
@@ -74,15 +74,15 @@ a {
 
 a.btn {
     font-weight: normal;
-    background: darken(@green, 15%);
+    background: darken(@red, 15%);
     display: inline-block;
     line-height: 30px;
     padding: 0 15px;
     border: none;
-    color: lighten(@green, 50%);
+    color: lighten(@red, 50%);
 
     &:hover, &:focus {
-        background: darken(@green, 20%);
+        background: darken(@red, 20%);
         color: #FFF;
     }
 }
