--- a/assets/css/_form.less
+++ b/assets/css/_form.less
@@ -12,14 +12,14 @@ input[readonly] {
 
 button.btn,
 input.btn {
-    background: darken(@green, 15%);
+    background: darken(@red, 15%);
     line-height: 30px;
     padding: 0 15px;
     border: none;
-    color: lighten(@green, 50%);
+    color: lighten(@red, 50%);
 
     &:hover, &:focus {
-        background: darken(@green, 20%);
+        background: darken(@red, 20%);
         color: #FFF;
     }
 }
