login with email

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -29,7 +29,7 @@
         </ul>
         <% if (!curUser) { %>
           <form action="/login" method="post" id="home-login">
-              <div><input type="text" name="username" id="home-input-username" placeholder="用户名" autofocus required></div>
+              <div><input type="text" name="username" id="home-input-username" placeholder="用户名或邮箱" autofocus required></div>
               <div><input type="password" name="password" id="home-input-password" placeholder="口令" required></div>
               <div><input type="submit" name="submit" id="home-input-submit" value="登入"></div>
           </form>
