--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,7 +20,7 @@
     <div id="home-page">
         <div id="home-logo">Accounts9</div>
         <ul id="home-welcome">
-            <li>祝 BYVoid 生日快乐！</li>
+            <li>圣<span style="color: #000;">弹</span>快乐！</li>
             <% if (!curUser) { %>
               <li><a href="/register"><i class="icon-user"></i>注册</a></li>
             <% } else {%>
