bug-fix: 修正在编辑组时，标题显示为添加组的问题；修正在添加组时取消按钮失效的问题。

--- a/views/group/edit.ejs
+++ b/views/group/edit.ejs
@@ -51,7 +51,7 @@
       <% if (group) { %>
         href="/group/<%= group.name %>"
       <% } else { %>
-        href="/group/<%= parentGroup.name %>"
+        href="/group/<%= parentGroup %>"
       <% } %>
       class="btn"><%- msg('Cancel') %></a>
     </div>
