移除：组管理员在组管理页面内失效的编辑按钮 增添：超级管理员在所有用户列表中的编辑按钮 修改：添加“搜索结果”的本地化字符串 增添：向helper.checkRootAdmin 中添加 shouldRedirect 参数，方便用户权限判断

--- a/views/group/allusers.ejs
+++ b/views/group/allusers.ejs
@@ -15,5 +15,6 @@
   <% var users = group.users %>
   <% var showActions = false %>
   <% var showBelong = true %>
+  <% var showRootActions = group.isRoot %>
   <% include ../user/userlist %>
 <% })() %>
