--- a/views/user/searchresult.ejs
+++ b/views/user/searchresult.ejs
@@ -2,5 +2,6 @@
 <% (function () { %>
   <% var showActions = false %>
   <% var showBelong = false %>
+  <% var showRootActions = isRoot %>
   <% include userlist %>
 <% })() %>
