--- a/views/user/searchresult.ejs
+++ b/views/user/searchresult.ejs
@@ -1,4 +1,10 @@
 <h1>搜索结果</h1>
+<p>
+	<a class="btn invisible">喵~</a>
+<% (function () { %>
+	<% include ../partials/vcard.ejs %>
+<% })() %>
+</p>
 <% (function () { %>
   <% var showActions = false %>
   <% var showBelong = false %>
