--- a/views/group/group.ejs
+++ b/views/group/group.ejs
@@ -96,7 +96,9 @@
       <%- msg('all-users') %>
     </a>
 <% } %>
-<a id="export" href="#" download="contacts-<%= group.name %>.vcf" class="btn"><%- msg('save-as-vcard') %></a>
+<% (function () { %>
+	<% include ../partials/vcard.ejs %>
+<% })() %>
 </p>
 <% (function () { %>
   <% var users = group.users %>
@@ -105,6 +107,4 @@
   <% var showRootActions = group.isRoot %>
   <% include ../user/userlist %>
 <% })() %>
-<script src="/js/base64.js"></script>
-<script src="/js/vcard.js"></script>
 
