增加：userlist.ejs 与 vcard.js 的适配性的提示

--- a/views/user/userlist.ejs
+++ b/views/user/userlist.ejs
@@ -1,3 +1,4 @@
+<%  /* 特别注意：修改本页面时，注意与vcard.js的适配 */  %>
 <table id="colleague" class="table" style="font-size:12px">
   <tr>
     <th><%= msg('uid') %></th>
