增添：对partial的引用； 修改：修改若干模板文件中对于partial的使用 结论：貌似完工了

--- a/views/group/groupnode.ejs
+++ b/views/group/groupnode.ejs
@@ -3,7 +3,7 @@
         <div class="node" title="<%= groupnode.desc %>"><a href="/group/<%= groupnode.name %>" class="btn"><i class="icon-link"></i></a> <%= groupnode.title %></div>
         <ul>
         <% for (var i in groupnode.children) { %>
-          <%- partial('groupnode', groupnode.children[i]) %>
+          <%- partial('group/groupnode', groupnode.children[i]) %>
         <% } %>
         </ul>
     </li>
