--- a/views/group/groups.ejs
+++ b/views/group/groups.ejs
@@ -1,4 +1,4 @@
 <div id="group">
     <h1><%= msg('groups') %></h1>
-    <ul><%- partial('groupnode', groupRoot) %></ul>
+    <ul><%- partial('group/groupnode', groupRoot) %></ul>
 </div>
