--- a/views/user/userlist.ejs
+++ b/views/user/userlist.ejs
@@ -43,7 +43,7 @@
         </td>
       <% } %>
       <% if (showBelong) { %>
-        <td><%- partial('../group/grouplistplain', user.groups) %></td>
+        <td><%- partial('group/grouplistplain', user.groups) %></td>
       <% } %>
     </tr>
   <% }) %>
