--- a/views/group/group.ejs
+++ b/views/group/group.ejs
@@ -69,7 +69,7 @@
     <th><%- msg('group-children') %></th>
     <td>
       <ul class="unstyled">
-        <%- partial('grouplistitem', group.children) %>
+        <%- partial('group/grouplistitem', group.children) %>
       </ul>
       <% if (group.currentUserIsAdmin) { %>
         <p>
