--- a/views/user/userinfo.ejs
+++ b/views/user/userinfo.ejs
@@ -102,7 +102,7 @@
   <tr>
     <th><%= msg('belong-groups') %></th>
     <td>
-      <%- partial('../group/grouplistplain', user.directGroups) %>
+      <%- partial('group/grouplistplain', user.directGroups) %>
     </td>
   </tr>
   <% } %>
@@ -110,7 +110,7 @@
   <tr>
     <th><%= msg('admin-groups') %></th>
     <td>
-      <%- partial('../group/grouplistplain', user.adminGroups) %>
+      <%- partial('group/grouplistplain', user.adminGroups) %>
     </td>
   </tr>
   <% } %>
