移除：404页面的模板 增加：404页面 修改：footer上的年份 修改：开发人员列表

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -4,12 +4,13 @@
 <p>本系统基于Node.js搭建，使用到了express、ejs、mongoose、less、continuation.js等开源模块。</p>
 <p>开发者</p>
 <ul>
-  <li><a href="/u/byvoid">BYVoid</a>
-  <li><a href="/u/wyverald">Wyverald</a>
-  <li><a href="/u/nuk">Nuk</a>
-  <li><a href="/u/npbool">Npbool</a>
-  <li><a href="/u/liyuliang001">Liyuliang001</a>
-  <li><a href="/u/brian14708">Brian</a>
-  <li><a href="/u/ray0">Ray</a>
-  <li><a href="/u/zhangyx13">cqtest</a>
-</li>
+  <li><a href="/u/byvoid">BYVoid</a></li>
+  <li><a href="/u/wyverald">Wyverald</a></li>
+  <li><a href="/u/nuk">Nuk</a></li>
+  <li><a href="/u/npbool">Npbool</a></li>
+  <li><a href="/u/liyuliang001">Liyuliang001</a></li>
+  <li><a href="/u/brian14708">Brian</a></li>
+  <li><a href="/u/ray0">Ray</a></li>
+  <li><a href="/u/zhangyx13">cqtest</a></li>
+  <li><a href="/u/shanker">shanker</a></li>
+</ul>
