--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,21 +20,27 @@
     <div id="home-page">
         <div id="home-logo">Accounts9</div>
         <ul id="home-welcome">
-            <li>欢迎各位酒井用户来到Accounts9。</li>
-            <% if (!curUser) { %>
+            <li>
+            <% if (!notFound) { %>
+							欢迎各位酒井用户来到Accounts9。
+						<% } else { %>
+							您访问的页面未找到。
+						<% } %> 
+            </li>
+            <% if (!notFound && !curUser) { %>
               <li><a href="/register"><i class="icon-user"></i>注册</a></li>
             <% } else {%>
-              <li><a href="/u/<%= curUser.name %>">返回</a></li>
+              <li><a href="<%= notFound ? '/' : '/u/' + curUser.name %>">返回</a></li>
             <% } %>
         </ul>
-        <% if (!curUser) { %>
+        <% if (!notFound && !curUser) { %>
           <form action="/login" method="post" id="home-login">
               <div><input type="text" name="username" id="home-input-username" placeholder="用户名或邮箱" autofocus required></div>
               <div><input type="password" name="password" id="home-input-password" placeholder="口令" required></div>
               <div><input type="submit" name="submit" id="home-input-submit" value="登入"></div>
           </form>
         <% } %>
-        <div id="home-footer"><a href="/about">THU.DCST.SAST.NET</a> 2012-2013</div>
+        <div id="home-footer"><a href="/about">THU.DCST.SAST.NET</a> 2012-2015</div>
     </div>
 
     <script src="/js/jquery-1.7.2.min.js"></script>
