添加智能卡关联模块

--- a/assets/css/style.less
+++ b/assets/css/style.less
@@ -133,7 +133,7 @@ hr {
     list-style: none;
     padding: 0 10px;
 
-    .btn-danger {
+    .btn {
         font-size: 0.8em;
         line-height: 2em;
         padding: 0 15px;
